# movies-api

./: .flake8  .gitignore  README.md  Taskfile.yaml  main.py  pyproject.toml
.github/workflows/: python-package.yml
docs/: index.html  openapi.json
movies_api/: api.py  models.py  repository.py  service.py
tests/: conftest.py  test_add_movies.py  test_movies_api.py  test_repository.py
tests/e2e/: test_api.py
tests/integration/: test_movie_service.py
tests/unit/: test_repository.py
