[tool.poetry]
name = "movies-api"
version = "0.1.0"
description = ""
authors = ["Niko Heikkilä <niko.heikkila@futurice.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.37"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
mypy = "^0.961"
pytest-cov = "^3.0.0"
assertpy = "^1.1"
flake8 = "^4.0.1"

[tool.black]
line-length = 120

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
